# FastAPIChatbotWithPrometheus

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fastapi_dashboard.json  main.py  prometheus.yml  prometheus_local.yml  pyproject.toml  requirements.txt
data/wal/: 00000000
grafana/provisioning/dashboards/: dashboard.yml  fastapi_dashboard.json
static/: index.html
