[project]
name = "fastapi-chatbot"
version = "0.1.0"
description = "A FastAPI Chatbot with Prometheus monitoring"
authors = [
    {name = "Scarlett Attensil"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "prometheus-client (>=0.21.1,<0.22.0)",
    "redis (>=6.1.0,<7.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "langchain-core (>=0.3.60,<0.4.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
